[package]
name = "enet"
version = "0.3.2"
edition = "2021"
description = "ENet for Rust (and wasm!) transpiled from C."
homepage = "https://github.com/jabuwu/rusty_enet"
repository = "https://github.com/jabuwu/rusty_enet"
readme = "README.md"
license = "MIT"
exclude = [
    "/.github",
    "/ci",
    "/examples",
]

[features]
default = ["std"]
std = []
connected = []

[dev-dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"