[package]
name = "enet"
version = "0.3.3"
edition = "2021"
description = "ENet for Rust transpiled from C."
homepage = "https://github.com/bbangg/enet"
repository = "https://github.com/bbangg/enet"
readme = "README.md"
license = "MIT"
exclude = [
    "/examples",
]

[features]
default = ["std"]
std = []
connected = []

[dev-dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"
